# polysignal

./: .gitignore  LICENSE  README.md  pyproject.toml  vercel.json
api/: index.py
public/: index.html
scripts/: print_event_market_order.py
src/: index.py
src/polysignal/: analysis.py  cli.py  polymarket.py  scoring.py  utils.py
tests/: conftest.py
tests/tests/: test_regression_harness.py
tests/tests/regression/: fake_pm.py  test_analysis_regression.py  test_cli_pnl_tags.py
vercel_api/: index.py
