[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "polysignal"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "typer>=0.12",
  "rich>=13.7",
  "diskcache>=5.6",
  "tenacity>=8.2",
]

[project.scripts]
polysignal = "polysignal.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
